NULL =
themedir = $(datadir)/icons/$(PACKAGE)/
 
theme_in_files = index.theme.in
theme_DATA = $(theme_in_files:.theme.in=.theme)
@INTLTOOL_THEME_RULE@
 
EXTRA_DIST= \
	$(theme_in_files) \
	index.theme.in \
	my-mapping.xml \
	$(NULL)
 
SUBDIRS= 12x12 16x16 192x192 20x20 24x24 32x32 36x36 48x48 72x72 96x96


